# django_polls

./: README.md  db.sqlite3  pyproject.toml
django_polls/mysite/: settings.py
django_polls/polls/: models.py  views.py
django_polls/polls/static/polls/: style.css
django_polls/polls/templates/polls/: index.html
mysite/: settings.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  index.html  results.html
templates/admin/: base_site.html
