[tool.poetry]
name = "django-polls"
version = "0.1.0"
description = ""
authors = ["Behruz Ernazarov <developerbehruz4080@gmail.com>"]
readme = "README.md"
packages = [{include = "django_polls"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
